<package>
  <name>saw_joystick_examples</name>
  <version>1.0.0</version>
  <description>sawJoystick examples</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawJoystick</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>saw_joystick</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>saw_joystick</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
