<?xml version="1.0"?>
<package>
  <name>saw_joystick_config</name>
  <version>1.1.0</version>
  <description>sawJoystick config files</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>

  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawJoystick</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
